# wgpu-vxgi

./: .gitignore  Cargo.toml  firebase.json  package-lock.json
.cargo/: config
client/: index.html
src/: camera.rs  gltf_loader.rs  image_future.rs  lib.rs  shader.rs  texture.rs  util.rs  voxel_texture.rs
src/shaders/: mipmap_3d.wgsl  shader.wgsl  shadow.wgsl  voxelize.wgsl
