[package]
name = "voxel_gi"
version = "0.1.0"
edition = "2021"

[build-dependencies]
fs_extra = "1.2"
glob = "0.3"

[dependencies]
cfg-if = "1"
winit = "*"
env_logger = "0.9"
log = "*"
pollster = "*"
bytemuck = { version = "*", features = ["derive"] }
cgmath = { version = "*", features = ["swizzle"] }
gltf = "*"
anyhow = "1.0"
futures = "0.3.25"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.16.0" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
reqwest = { version = "0.11"}
web-sys = { version = "=0.3.61", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Location",
    "HtmlImageElement",
    "ImageBitmap",
    "ImageBitmapFormat",
    "Gpu",
    "Navigator",
] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[lib]
crate-type = ["cdylib", "rlib"]
